@@ -1,3 +1,4 @@
+	* optimize UDP tracker packet handling
 	* support SSL over uTP connections
 	* support web seeds that resolve to multiple IPs
 	* added auto-sequential feature. download well-seeded torrents in-order
